tests/out/error/call/ignore_ret_val.in.bt
fun foo(x i32) i32 {
	return 1
}

foo(1)
_ := foo(2)
_ = foo(3)
